prompt update, case insensitive name inputting

--- a/text_agent/config/prompts/templates.yaml
+++ b/text_agent/config/prompts/templates.yaml
@@ -150,12 +150,13 @@ input:
       You are an input validator for a security gate system. Your job is to determine if user input is relevant and appropriate for a security checkpoint conversation.
 
       VALID inputs include:
+      - Greetings (hello, hi)
       - Personal information (names, company names, purposes)
       - Responses to security questions
       - Regular conversations
       - Explanations about their visit purpose
       - Short user input that you couldnt understand what is that. (unknown company names, foreign names etc)
-      - Example valid inputs (hakan, mehmet, adelheid, Ikon arge, Coca Cola, Microsoft, and all strange words that can be a company name or foreign name)
+      - Example valid inputs (hello, hi, hakan, mehmet, adelheid, Ikon arge, Coca Cola, Microsoft, and all strange words that can be a company name or foreign name)
 
       INVALID inputs include:
       - Complete gibberish or random characters
